<resources>
    <string name="app_name">Vacation Home</string>
    <string name="msg">Allow all</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="evidencia">Evidence</string>
    <string name="estoque">Stock</string>
    <string name="quantidade">Quantity stock</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="rfid">RFID</string>
    <string name="insert_item">New Item</string>
    <string name="item">Item</string>
    <string name="other">OTHER</string>
    <string name="epc">EPC</string>
    <string name="qtde">Quantity: </string>
    <string name="process">Process</string>
    <string name="inventory">Inventory</string>
    <string name="question">Question</string>
    <string name="i">I -</string>
    <string name="q">Q -</string>
    <string name="novo_titulo">New title</string>
    <string name="preencha_campo">Fill in the fields</string>
    <string name="good">Good!!</string>
    <string name="now">Now, you will answer the questions about this environment</string>
    <string name="take_picture">Take a picture</string>
    <string name="congrants">Congrants!</string>
    <string name="msg_congrants">You have finalized your checklist.</string>
    <string name="resposta">Answer</string>
    <string name="finish_room">You finished this room, lets go to the next one!</string>
    <string name="start_checklist">Now lets start a checklist, okay?</string>
    <string name="previous_room">Finish the previous room</string>
    <string name="load">Loading...</string>
    <string name="nice">Nice!</string>
    <string name="no_room">There are no registered rooms</string>
    <string name="categoria">Category</string>
    <string name="synchronize">Synchronize the Checklist --></string>
    <string name="back_press">Press the back button again</string>
    <string name="sync">Sync</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_login">Sign in</string>
    <string name="message_sign_out">Do you really want to sign out ?</string>
    <string name="no_checklist">There is no pending checklist</string>
    <string name="select_house">Select a house</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="no_connect">No internet connection</string>
    <string name="agenda">Appointment book</string>
    <string name="not_find_rfid">Are you sure you can not find RFID ?</string>
    <string name="epc_register">This epc has already been registered</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="change_house">Change House</string>
    <string name="poweredby">Powered by</string>
    <string name="error_insert">Insert error</string>
    <string name="ok">Ok</string>
    <string name="this_ambiente">This a room?</string>
    <string name="setting">Settings</string>
    <string name="room_ok">Is room ok ?</string>
    <string name="description">Describe</string>
    <string name="parameterized">Parameterized: </string>
    <string name="last_count">Last count: </string>
    <string name="versao">Version: 1.4.0</string>
    <string name="nok">Nok</string>
    <string name="incorret_barcode">Incorret Barcode:</string>
    <string name="scan">Scanning...</string>
    <string name="pending">Pending</string>
</resources>
