<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="24dp"
        android:paddingTop="24dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="24dp"
            android:text="@string/insert_item"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingRight="24dp">

            <Spinner
                android:id="@+id/spinnerItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </Spinner>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingRight="24dp"
            android:visibility="gone">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editRoom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingRight="24dp"
            android:text="@string/rfid"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:paddingRight="24dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputEpc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="24dp"
                android:visibility="gone">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editEPC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/epc" />

            </android.support.design.widget.TextInputLayout>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingRight="24dp"
            android:text="@string/evidencia"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/radioGroupEvidence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:paddingRight="24dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no" />

        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingRight="24dp"
            android:visibility="gone">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editQtde"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantidade"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="end"
            android:orientation="horizontal"
            android:padding="8dp">

            <Button
                android:id="@+id/btCancel"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:text="@string/cancel"
                android:textColor="?attr/colorControlActivated" />

            <Button
                android:id="@+id/btDone"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginLeft="8dp"
                android:text="@string/done"
                android:textColor="?attr/colorControlActivated" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>