<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingLeft="24dp"
    android:paddingTop="24dp">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="24dp"
        android:text="Insert quantity"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".9">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editDescrica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description" />

        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/addImage"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="24dp"
            app:srcCompat="@drawable/ic_camera_alt_black_24dp" />

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="24dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editQtde"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantidade"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/parameterized"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/parameterized"
            android:layout_weight=".5" />

        <TextView
            android:id="@+id/last_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/last_count"
            android:layout_weight=".5" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="end"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/btCancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/cancel"
            android:textColor="?attr/colorControlActivated" />

        <Button
            android:id="@+id/btDone"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginLeft="8dp"
            android:text="@string/done"
            android:textColor="?attr/colorControlActivated" />

    </LinearLayout>

</LinearLayout>