<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingLeft="24dp"
    android:paddingTop="24dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="24dp"
        android:text="Insert a new question"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <!--<android.support.design.widget.TextInputLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:paddingRight="24dp">-->

        <!--<android.support.design.widget.TextInputEditText-->
            <!--android:id="@+id/editQuestion"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/question" />-->

    <!--</android.support.design.widget.TextInputLayout>-->

    <Spinner
        android:id="@+id/spinner"
        android:layout_marginTop="20dp"
        android:layout_marginRight="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Spinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/evidencia"
        android:layout_marginTop="20dp"
        android:paddingRight="24dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/radioGroupEvidence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="end"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/btCancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/cancel"
            android:textColor="?attr/colorControlActivated" />

        <Button
            android:id="@+id/btDone"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginLeft="8dp"
            android:text="@string/done"
            android:textColor="?attr/colorControlActivated" />

    </LinearLayout>

</LinearLayout>