<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="end"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/btNok"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight=".33"
            android:text="@string/nok"
            android:textColor="?attr/colorControlActivated" />

        <Button
            android:id="@+id/btCancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:text="@string/cancel"
            android:layout_weight=".35"
            android:textColor="?attr/colorControlActivated" />

        <Button
            android:id="@+id/btOk"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight=".33"
            android:text="@string/ok"
            android:textColor="?attr/colorControlActivated" />

    </LinearLayout>

</LinearLayout>