<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleRoom"
        android:layout_width="match_parent"
        android:text="@string/this_ambiente"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/image"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_weight=".9"
        android:layout_height="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:layout_marginTop="20dp"
        android:gravity="end"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/btCancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginLeft="8dp"
            android:text="@string/no"
            android:textColor="?attr/colorControlActivated" />

        <Button
            android:id="@+id/btDone"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginLeft="8dp"
            android:text="@string/yes"
            android:textColor="?attr/colorControlActivated" />

    </LinearLayout>

</LinearLayout>